--- a/src/styles.css
+++ b/src/styles.css
@@ -28,22 +28,16 @@
     --color-border-hover: var(--vt-c-divider-light-1);
     --color-heading: var(--vt-c-text-light-1);
     --color-text: var(--vt-c-text-light-1);
+    --color-text-hover: var(--vt-c-text-light-2);
+    --color-button-hover: var(--vt-c-metal);
+    --color-card-details-background: var(--vt-c-white);
+    --transition-short: 0.2s;
+    --transition-medium: 0.5s;
+    --transition-long: 1s;
+    --border-radius-small: 0.25rem;
+    --border-radius-medium: 0.5rem;
+    --border-radius-large: 1rem;
 }
-/* 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --color-background: var(--vt-c-black-soft);
-        --color-background-soft: var(--vt-c-black-soft);
-        --color-background-mute: var(--vt-c-black-mute);
-
-        --color-border: var(--vt-c-divider-dark-2);
-        --color-border-hover: var(--vt-c-divider-dark-1);
-
-        --color-heading: var(--vt-c-text-dark-1);
-        --color-text: var(--vt-c-text-dark-2);
-    }
-} */
-
 /* *,
 *::before,
 *::after {
@@ -59,7 +53,7 @@ body {
     width: 100vw;
     color: var(--color-text);
     background: var(--color-background);
-    transition: color 0.5s, background-color 0.5s;
+    /* transition: color 0.5s, background-color 0.5s; */
     line-height: 2rem;
     /* font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -80,7 +74,7 @@ body {
 button {
     background: var(--vt-c-white);
     border: none;
-    border-radius: 0.5rem;
+    border-radius: var(--border-radius-medium);
     color: var(--color-text);
     cursor: pointer;
     font-size: 1rem;
@@ -89,9 +83,15 @@ button {
     padding: 0.5rem 1rem;
     text-align: center;
     text-decoration: none;
-    transition: background-color 0.5s, border-color 0.5s, color 0.5s;
+    transition: var(--transition-short);
     user-select: none;
     white-space: nowrap;
+}
+
+button:hover {
+    background: var(--color-button-hover);
+    border-color: var(--color-border-hover);
+    color: var(--color-text-hover);
 }
 
 text {
@@ -107,9 +107,8 @@ text {
 .card {
     background: var(--color-background);
     border: 1px solid var(--color-border);
-    border-radius: 0.25rem;
+    border-radius: var(--border-radius-small);
     color: var(--color-text);
-    cursor: pointer;
     font-size: 1rem;
     font-weight: 600;
     line-height: 1;
@@ -118,14 +117,6 @@ text {
     text-decoration: none;
     transition: background-color 0.5s, border-color 0.5s, color 0.5s;
     white-space: nowrap;
-}
-
-.card p {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: column;
-    text-wrap: balance;
 }
 
 div#hand {
@@ -154,4 +145,46 @@ div#attribute-buttons {
 
 div#game-output {
     display: flex;
+}
+
+#game-results {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.attribute-buttons {
+    display: flex;
+    flex-direction: column;
+    border-color: var(--color-border);
+    border-width: 0.2rem;
+    border-style: solid;
+}
+
+button.attribute-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 0;
+}
+.attribute-buttons {
+    display: flex;
+    flex-direction: column;
+}
+
+h3.card-title,
+p.fact {
+    background-color: var(--color-card-details-background);
+    padding: 0.5em;
+    border-color: var(--color-border);
+    border-width: 0.2rem;
+    border-style: solid;
+}
+
+p.fact {
+    height: 3em;
+    justify-content: center;
+    white-space: normal;
+    overflow: hidden;
 }
