fitting show cards in flexbox

--- a/src/styles.css
+++ b/src/styles.css
@@ -161,11 +161,12 @@ div#game-output {
 }
 
 div#non-leader-cards {
-    position: absolute;
-    right: 0;
     margin: 0.5em;
-    width: min-content;
     display: flex;
+    overflow: hidden;
+    height: -webkit-fill-available;
+    width: -webkit-fill-available;
+    justify-content: end;
 }
 
 div#non-leader-cards > div {
