--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@
     --vt-c-text-light-1: var(--vt-c-indigo);
     --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
     --vt-c-text-dark-1: var(--vt-c-white);
+    --vt-box-shadow: 0px 0.2rem 0.5rem rgba(0, 0, 0, 0.2);
     --color-background-card: var(--vt-c-blue-washed);
     --color-background-light: var(--vt-c-white);
     --color-background-dark: var(--vt-c-grass);
@@ -107,6 +108,7 @@ body {
     align-items: center;
     background-color: var(--color-background-card);
     padding: 4em 0;
+    box-shadow: var(--vt-box-shadow);
 }
 #game-setup div,
 form {
@@ -159,6 +161,7 @@ button:hover {
     text-align: center;
     transition: background-color 0.5s, border-color 0.5s, color 0.5s;
     white-space: wrap;
+    box-shadow: var(--vt-box-shadow);
 }
 
 #lead-player-output {
@@ -166,6 +169,7 @@ button:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 1rem;
 }
 
 div#hand {
@@ -331,6 +335,7 @@ button:focus {
 @media (width < 990px) {
     div#non-leader-cards {
         flex-direction: column;
+        align-items: flex-end;
     }
     div#game-play-area {
         display: block;
