--- a/src/styles.css
+++ b/src/styles.css
@@ -333,6 +333,10 @@ button:focus {
 }
 
 @media (width < 990px) {
+    body {
+        /* set the base font size to 20px */
+        font-size: 25px;
+    }
     div#non-leader-cards {
         flex-direction: column;
         align-items: flex-end;
