--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@
     --color-border-hover: var(--vt-c-divider-light-1);
     --color-heading: var(--vt-c-text-light-1);
     --color-text: var(--vt-c-text-light-1);
+    --color-text-faded: var(--vt-c-text-light-2);
     --color-text-hover: var(--vt-c-text-light-2);
     --color-button-hover: var(--vt-c-metal);
     --color-card-details-background: var(--vt-c-white);
@@ -193,6 +194,7 @@ dialog#round-results {
     justify-content: center;
     align-items: center;
     margin-left: 1rem;
+    width: 100%;
 }
 
 div#hand {
@@ -209,19 +211,6 @@ div#turn-status {
     border-radius: var(--border-radius-small);
     background-color: var(--color-background-card);
     width: 18rem;
-}
-
-button#reset-game {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin: 1rem;
-    display: none;
-}
-
-button#end-game-setup {
-    margin: 1rem;
-    display: none;
 }
 
 div#attribute-buttons {
@@ -292,6 +281,19 @@ button.attribute-button,
     border-radius: 0;
 }
 
+button#reset-game {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 1rem;
+    display: none;
+}
+
+button#end-game-setup {
+    margin: 1rem;
+    display: none;
+}
+
 h3.card-title,
 p.fact {
     background-color: var(--color-background-light);
@@ -311,7 +313,7 @@ p.fact {
 
 li.lost {
     text-decoration: line-through;
-    color: var(--vt-c-text-dark-2);
+    color: var(--color-text-faded);
 }
 
 .sheen:after {
@@ -356,15 +358,5 @@ button:focus {
     body {
         /* set the base font size to 20px */
         font-size: 25px;
-    }
-    div#non-leader-cards {
-        flex-direction: column;
-        align-items: flex-end;
-    }
-    div#game-play-area {
-        display: block;
-    }
-    #lead-player-output {
-        display: block;
     }
 }
